syntax = "proto3";

package example;

service ExampleService {
    rpc GetExample(ExampleRequest) returns (ExampleResponse) {}
}

message ExampleRequest {
    string name = 1;
}

message ExampleResponse {
    string message = 1;
}
